# silc

./: .cvsignore  .gitignore  CHANGES  CHANGES.CRYPTO  CHANGES.RUNTIME  CHANGES.TOOLKIT  CREDITS  INSTALL  Makefile.ad  Makefile.am  Makefile.am.pre  Makefile.defines  Makefile.defines.in  Makefile.defines.pre  Makefile.defines_int  Makefile.defines_int.in  Makefile.defines_int.pre  README  README.CVS  README.DIST  README.GIT  README.MACOSX  README.PLUGIN  README.SYMBIAN  README.WIN32  TODO  TODO-1.0  TODO-SILC  acconfig.h  acconfig.h.pre  autodist  configure.ad  configure.in  configure.in.pre  distributions  libtoolfix  prepare  prepare-clean  silc-toolkit.spec.in  silc.m4  (+1 more)
apps/autodist/: AUTHORS  CHANGES  COPYING  Makefile.am  README  TODO  autodist.conf  autodist.in  autodist.spec.in  configure.ad  default  makedist.in
apps/irssi/: CHANGES  ChangeLog  Makefile.am  acconfig.h  autogen.sh  config  config.h.in  configure.ad  configure.in  default-config.h  default.theme  irssi-config.in  irssi-version.h.in  irssi.spec.in  plugin.theme  silc-client.spec.in  silc.conf
apps/silc/: Makefile.am  README  client.c  client.h  client_ops.c  client_ops.h  clientconfig.c  clientconfig.h  clientincludes.h  clientutil.c  clientutil.h  command.c  command.h  command_reply.c  command_reply.h  idlist.c  idlist.h  local_command.c  local_command.h  protocol.c  protocol.h  pubkey.pub  screen.c  screen.h  silc.c  silc.h  testi.conf  testi2.conf
apps/silcd/: .cvsignore  Makefile.am  command.c  command.h  command_reply.c  command_reply.h  configure.ad  idlist.c  idlist.h  leevi.conf  leevi2.conf  packet_receive.c  packet_receive.h  packet_send.c  packet_send.h  protocol.c  protocol.h  pubkey.pub  route.c  route.h  server.c  server.h  server_backup.c  server_backup.h  server_http.c  server_internal.h  server_query.c  server_query.h  server_util.c  server_util.h  server_version.c  serverconfig.c  serverconfig.h  serverid.c  serverid.h  serverincludes.h  silc-server.spec.in  silc.conf  silcd.c  silcd.h  (+2 more)
apps/silcer/: Makefile.am  Makefile.in  README  acconfig.h  aclocal.m4  config.h.in  configure.in  xml-i18n-extract.in  xml-i18n-merge.in  xml-i18n-update.in
doc/: .cvsignore  CodingStyle  FAQ  Makefile.ad  Makefile.am  Makefile.am.pre  Makefile.in  draft-riikonen-presence-attrs-00.nroff  draft-riikonen-presence-attrs-01.nroff  draft-riikonen-presence-attrs-02.nroff  draft-riikonen-presence-attrs-03.nroff  draft-riikonen-presence-attrs-04.nroff  draft-riikonen-silc-commands-00.nroff  draft-riikonen-silc-commands-01.nroff  draft-riikonen-silc-commands-02.nroff  draft-riikonen-silc-commands-03.nroff  draft-riikonen-silc-commands-04.nroff  draft-riikonen-silc-commands-05.nroff  draft-riikonen-silc-commands-06.nroff  draft-riikonen-silc-commands-07.nroff  draft-riikonen-silc-flags-payloads-00.nroff  draft-riikonen-silc-flags-payloads-01.nroff  draft-riikonen-silc-flags-payloads-02.nroff  draft-riikonen-silc-flags-payloads-03.nroff  draft-riikonen-silc-flags-payloads-04.nroff  draft-riikonen-silc-ke-auth-00.nroff  draft-riikonen-silc-ke-auth-01.nroff  draft-riikonen-silc-ke-auth-02.nroff  draft-riikonen-silc-ke-auth-03.nroff  draft-riikonen-silc-ke-auth-04.nroff  draft-riikonen-silc-ke-auth-05.nroff  draft-riikonen-silc-ke-auth-06.nroff  draft-riikonen-silc-ke-auth-07.nroff  draft-riikonen-silc-ke-auth-08.nroff  draft-riikonen-silc-ke-auth-09.nroff  draft-riikonen-silc-multimedia-session-00.nroff  draft-riikonen-silc-pp-00.nroff  draft-riikonen-silc-pp-01.nroff  draft-riikonen-silc-pp-02.nroff  draft-riikonen-silc-pp-03.nroff  (+25 more)
doc/development/: lib_reference.sgml
doc/examples/: README  cell1_backup.conf  cell1_router.conf  cell1_server1.conf  cell1_server2.conf  cell2_router.conf  cell2_server1.conf  cell2_server2.conf  cell3_router.conf  cell3_server1.conf  cell3_server2.conf  cell_backup.conf  cell_router.conf  cell_server1.conf  cell_server2.conf  silcd.prv  silcd.pub
doc/whitepaper/: Makefile.am  silc_channel.edg  silc_network.edg  silc_packet.edg  silc_priv1.edg  silc_priv2.edg  silc_priv3.edg  silc_protocol.html  silc_routers.edg  silc_template.edg
includes/: Makefile.ad  Makefile.am  Makefile.in  bitmove.h  clientincludes.h  clientlibincludes.h  serverincludes.h  silc.h.in  silcbeos.h  silccompile.h  silcdefs.h.in  silcepoc.h  silcincludes.h  silcincludes.h.in  silcos2.h  silcsymbian.h  silcversion.h  silcversion.h.in  silcwin32.h  version.h
lib/contrib/: Makefile.ad  Makefile.am  getopt.c  getopt.h  getopt1.c  getopti.c  getopti.h  nfkc.c  regex.c  regexpr.c  regexpr.h  stringprep.c  stringprep.h
lib/silcclient/: DIRECTORY  Makefile.ad  Makefile.am  README  client.c  client.h  client_attrs.c  client_channel.c  client_channel.h  client_connect.c  client_connect.h  client_entry.c  client_entry.h  client_ftp.c  client_ftp.h  client_internal.h  client_keyagr.c  client_keyagr.h  client_listener.c  client_listener.h  client_notify.c  client_notify.h  client_ops_example.c  client_prvmsg.c  client_prvmsg.h  client_register.c  client_register.h  client_resume.c  command.c  command.h  command_reply.c  command_reply.h  idlist.c  idlist.h  ops.h  protocol.c  protocol.h  silcapi.h  silcclient.h  silcclient_entry.h  (+1 more)
lib/silccore/: DIRECTORY  Makefile.ad  Makefile.am  README  id.c  id.h  idcache.c  idcache.h  silcargument.c  silcargument.h  silcattrs.c  silcattrs.h  silcauth.c  silcauth.h  silcbuffer.c  silcbuffer.h  silcbuffmt.c  silcbuffmt.h  silcbufutil.c  silcbufutil.h  silcchannel.c  silcchannel.h  silcchannel_i.h  silccommand.c  silccommand.h  silcconfig.c  silcconfig.h  silcid.c  silcid.h  silcidcache.c  silcidcache.h  silclog.c  silclog.h  silcmemory.c  silcmemory.h  silcmessage.c  silcmessage.h  silcmessage_i.h  silcmode.c  silcmode.h  (+24 more)
lib/silccrypt/: DIRECTORY  Makefile.ad  Makefile.am  aes.c  aes.h  aes_x86.asm  aes_x86_64.asm  blowfish.c  blowfish.h  blowfish_internal.h  cast.c  cast.h  cast5.c  cast5.h  cast5_internal.h  cast_internal.h  ciphers.h  ciphers_def.h  configure.ad  crypton.c  crypton.h  (+77 more)
win32/: Makefile.am  README  clean_dist.pl  copy_dll  silc.dsw  silcdefs.h  trq_conf.h
(+846 files in other folders)
